# ClaudeForge

./: .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  SETUP.md  config.example.yml  docker-compose.yml  pyproject.toml  setup.sh
src/claudeforge/: __init__.py  claude_session.py  cli.py  config.py  github_client.py  notifications.py  orchestrator.py
tests/: __init__.py  test_config.py
